feat(dev): implemented dev mode

--- a/docker/daemon/Dockerfile
+++ b/docker/daemon/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:buster
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN apt update && apt install -y python3 python3-pip
+RUN apt update && apt install -y python3 python3-pip procps
 
 RUN pip3 install docker
 RUN pip3 install werkzeug
@@ -9,6 +9,5 @@ RUN pip3 install json-rpc
 
 COPY . /incubator
 WORKDIR /incubator
-RUN pip3 install -e .
 
-CMD ["/usr/local/bin/rallfd"]
+CMD ["/incubator/docker/daemon/docker-entrypoint.sh"]
